@@ -114,7 +114,7 @@ class CSharpConstantsFile {
 
         constant = gen.getCodeStyle().getUpperCase(pattern.getName());
         enm.addConstant(constant, String.valueOf(pattern.getId()));
-        constantNames.put(new Integer(pattern.getId()), constant);
+        constantNames.put(Integer.valueOf(pattern.getId()), constant);
     }
 
     /**
@@ -129,7 +129,7 @@ class CSharpConstantsFile {
         if (!pattern.isSynthetic()) {
             constant = gen.getCodeStyle().getUpperCase(pattern.getName());
             enm.addConstant(constant, String.valueOf(pattern.getId()));
-            constantNames.put(new Integer(pattern.getId()), constant);
+            constantNames.put(Integer.valueOf(pattern.getId()), constant);
         }
     }
 
@@ -143,7 +143,7 @@ class CSharpConstantsFile {
      *         null if not found
      */
     public String getConstant(int id) {
-        String  name = (String) constantNames.get(new Integer(id));
+        String  name = (String) constantNames.get(Integer.valueOf(id));
 
         if (name == null) {
             return null;
